--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     container_name: evcharges_backend
     restart: always
     command: sh -c "python manage.py collectstatic --noinput &&
+                    python manage.py makemigrations &&
                     python manage.py migrate &&
                     daphne -b 0.0.0.0 -p 8000 ElectricalVehicleCharges.asgi:application"
     volumes:
