--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:alpine
+    container_name: evcharges_redis
+    restart: always
+    ports:
+      - "6379:6379"
+
   web:
     build: .
     container_name: evcharges_backend
@@ -28,9 +35,11 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=postgresql://admin:admin123@db:5432/evcharges
       - DEBUG=True
+      - REDIS_HOST=redis
 
   fastapi:
     build: .
@@ -44,9 +53,11 @@ services:
     depends_on:
       - db
       - web
+      - redis
     environment:
       - DATABASE_URL=postgresql://admin:admin123@db:5432/evcharges
       - DEBUG=True
+      - REDIS_HOST=redis
 
 volumes:
   postgres_data:
